# gif-wasm-codec

./: .gitignore  Cargo.toml  LICENSE.md  README.md  gif_wasm_codec_bg.wasm  gif_wasm_codec_bg.wasm.d.ts  package.json
.github/workflows/: create-branch.yml
pkg/: README.md  gif_wasm_codec.d.ts  gif_wasm_codec.js  gif_wasm_codec_bg.js  package.json
src/: lib.rs
www/: index.html  main.ts  package.json  vite.config.ts
